# finhist

./: README.md  pyproject.toml
src/finhist/: utils.py
src/finhist/bond/: DGS10.csv  DGS2.csv  DGS30.csv  DGS3MO.csv  GS10.csv  __init__.py  tbill3m_yield_census.csv
src/finhist/cny/: MYAGM2CNM189N.csv  __init__.py  us-dollar-yuan-exchange-rate-historical-chart.csv
src/finhist/dollar/: A576RC1.csv  BA06RC1A027NBEA.csv  BOGMBASE.csv  M2SL.csv  __init__.py  cpi_frb.csv  cpi_frb_1800.csv  m2_census.csv
src/finhist/eur/: ECB Data Portal_20240219191335.csv  __init__.py  usd.xml
src/finhist/gbp/: MBM0UKM.csv  __init__.py
src/finhist/gold/: __init__.py  gold-production.csv
src/finhist/jpy/: __init__.py  nme_R031.13609.20240219201551.01.csv  nme_R031.19695.20240219222133.02.csv  nme_R031.2504.20240219202601.02.csv  nme_R031.5998.20240219194232.01.csv  nme_R031.6330.20240219194406.01.csv  nme_R031.7259.20240219194913.01.csv
src/finhist/stock/: __init__.py  nikkei-225-index-historical-chart-data.csv
tests/bond/: test_bond.py
tests/cny/: test_cny.py
tests/dollar/: test_dollar.py
tests/eur/: test_eur.py
tests/gbp/: test_gbp.py
tests/gold/: test_gold.py
tests/jpy/: test_jpy.py
tests/stock/: test_stock.py
tests/testing/: utils.py
tests/utils/: test_smart_concat.py  test_smart_concat_series.py
