[project]
name = "finhist"
version = "0.1.6"
description = "Default template for PDM package"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "numpy>=1.1.0",
    "pandas>=1.1.0",
]
requires-python = ">=3.1.0"
readme = "README.md"
license = {text = "CC0-1.0"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
